--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.2.0",
+    "ant-design": "^1.0.0",
+    "antd": "^4.22.1",
     "framer-motion": "^6.5.1",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
