--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "framer-motion": "^6.5.1",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
+    "react-device-detect": "^2.2.2",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
+    "simplebar-react": "^2.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
