--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-device-detect": "^2.2.2",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "simplebar-react": "^2.4.1",
