--- a/package.json
+++ b/package.json
@@ -1,26 +1,43 @@
 {
   "private": true,
   "dependencies": {
+    "@ant-design/colors": "^6.0.0",
+    "@ant-design/icons": "^4.7.0",
+    "@emotion/cache": "^11.9.3",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mui/material": "^5.9.2",
     "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^14.2.0",
+    "@testing-library/user-event": "^14.3.0",
     "ant-design": "^1.0.0",
     "antd": "^4.22.1",
+    "apexcharts": "^3.35.4",
+    "formik": "^2.2.9",
     "framer-motion": "^6.5.1",
+    "history": "^5.3.0",
+    "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
-    "react": "^18.1.0",
+    "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-device-detect": "^2.2.2",
-    "react-dom": "^18.1.0",
+    "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.5",
+    "react-element-to-jsx-string": "^15.0.0",
+    "react-number-format": "^4.9.3",
     "react-redux": "^8.0.2",
+    "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
+    "react-syntax-highlighter": "^15.5.0",
+    "react-window": "^1.8.7",
     "redux": "^4.2.0",
+    "simplebar": "^5.3.8",
     "simplebar-react": "^2.4.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
