--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.3.0",
     "ant-design": "^1.0.0",
-    "antd": "^4.22.1",
+    "antd": "^4.22.2",
     "apexcharts": "^3.35.4",
     "formik": "^2.2.9",
     "framer-motion": "^6.5.1",
@@ -39,6 +39,17 @@
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
+  "imports": {     
+    "#store/*": "./src/store/*",
+    "#pages/*": "./src/pages/*",
+    "#components/*": "./src/components/*",
+    "#routes/*": "./src/routes/*",
+    "#themes/*": "./src/themes/*",
+    "#layout/*": "./src/layout/*",
+    "#assets/*": "./src/assets/*",
+    "#menu-items/*": "./src/menu-items/*",
+    "#utils/*": "./src/utils/*" 
+  } ,
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
