--- a/package.json
+++ b/package.json
@@ -34,12 +34,12 @@
     "react-syntax-highlighter": "^15.5.0",
     "react-window": "^1.8.7",
     "redux": "^4.2.0",
-    "simplebar": "^5.3.8",
-    "simplebar-react": "^2.4.1",
+    "simplebar": "5.3.8",
+    "simplebar-react": "2.4.1",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
-  "imports": {     
+  "imports": {
     "#store/*": "./src/store/*",
     "#pages/*": "./src/pages/*",
     "#components/*": "./src/components/*",
@@ -51,7 +51,7 @@
     "#utils/*": "./src/utils/*",
     "#config": "./src/config.js",
     "#menu-items": "./src/menu-items"
-  } ,
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -59,17 +59,10 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": ["react-app", "react-app/jest"]
   },
   "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
+    "production": [">0.2%", "not dead", "not op_mini all"],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
