--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^6.5.1",
     "history": "^5.3.0",
     "lodash": "^4.17.21",
+    "mongoose": "^6.6.5",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
@@ -37,6 +38,7 @@
     "redux": "^4.2.0",
     "simplebar": "5.3.8",
     "simplebar-react": "2.4.1",
+    "vercel": "^28.4.7",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
